# prosit_grpc

./: .buildinfo  .cookietemple.yml  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README.rst  authors.html  code_of_conduct.html  contributing.html  cookietemple.cfg  create_setup.py  genindex.html  index.html  installation.html  noxfile.py  objects.inv  pyproject.toml  readme.html  reference.html  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: build_package.yml  publish_package.yml  run_tests.yml
_sources/: index.rst.txt  installation.rst.txt
docs/: Makefile  conf.py  contributing.rst  make.bat  reference.rst  usage.rst
makefiles/: Linux.mk  Windows.mk
prosit_grpc/: PredObject.py  __constants__.py  __init__.py  __main__.py  __utils__.py  inputPROSIT.py  old_predictPROSIT.py  outputPROSIT.py  parserPROSIT.py  predictPROSIT.py  predictPROSIT_2.py  test_intensity.py  test_proteotypicity.py
tests/: __init__.py  data.hdf5  generate_prediton_consistency_hdf.py  generate_test_input.py  input_test.csv  new_tests.py  output.hdf5  predict_to_hdf5.hdf5  prediction_consistency.hdf5  test.py  test_PROSITcharges.py  test_PROSITcollisionenergies.py  test_PROSITinput.py  test_PROSIToutput.py  test_PROSITpredictor.py  test_PROSITsequences.py  test_main.py  test_utils.py  tests.py
