[tool.poetry]
name = "prosit_grpc"
version = "1.2.0"
description = "A Client to access Prosit via GRPC"
authors = ["Daniela Andrade Salazar <danial.andrade@tum.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
scipy = "^1.5.3"
tensorflow = "^2.3.0"
tensorflow-serving-api = "^2.3.0"
grpcio = "^1.26.0"
tqdm = "^4.43.0"
autopep8 = "^1.5.3"
fundamentals = {git = "git@gitlab.lrz.de:compmass/prosit/tools/fundamentals.git", branch="develop"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
pytest-cov = "^2.8.1"

[build-system]
requires = [
    "poetry>=0.12",
    "setuptools!=50.0",
    "wheel"
    ]
build-backend = "poetry.masonry.api"
