[tool.poetry]
name = "prosit_grpc"
version = "1.2.0"
description = "A Client to access Prosit via GRPC"
authors = ["Daniela Andrade Salazar <danial.andrade@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.23.2"
tqdm = "^4.64.0"
grpcio = "^1.48.0"
tensorflow-serving-api = "^2.9.1"
fundamentals = {git = "https://gitlab.lrz.de/compmass/prosit/tools/fundamentals.git", rev = "develop_upgrade_dependencies"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.4"
pytest-cov = "^2.8.1"

[build-system]
requires = [
	"poetry-core>=1.0.0",
	"setuptools!=50",
	"wheel"
]
build-backend = "poetry.core.masonry.api"
